Configure PostgreSQL datasource and add required dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=ExpenseManager
+debug=true
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=mysecretpassword
+spring.datasource.url=jdbc:postgresql://localhost:5432/base
+spring.jpa.hibernate.ddl-auto=update
