--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,8 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+# Usa H2 en memoria para los tests
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
 spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Crea las tablas automáticamente basado en tus entidades @Entity
+spring.jpa.hibernate.ddl-auto=create-drop
